// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withIntersectionObserverProps Intersection Observer API is not supported should just pass Target component through 1`] = `
<Target
  a={1}
  b={2}
  c={3}
/>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported display name should not wrap display name in production env 1`] = `
<WithIntersectionObserverProps>
  <Target
    onRef={[Function]}
  />
</WithIntersectionObserverProps>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported display name should wrap display name in non-production env 1`] = `
<withIntersectionObserverProps(Target)>
  <Target
    onRef={[Function]}
  />
</withIntersectionObserverProps(Target)>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should call external \`onRef\` if it has been passed in 1`] = `
Array [
  Array [
    "ref",
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should map observer state to boolean props 1`] = `
<Target
  onRef={[Function]}
/>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should map observer state to boolean props 2`] = `
<Target
  bar={false}
  foo={false}
  onRef={[Function]}
/>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should map observer state to boolean props 3`] = `
<Target
  bar={false}
  foo={true}
  onRef={[Function]}
/>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should map observer state to boolean props 4`] = `
<Target
  bar={true}
  foo={true}
  onRef={[Function]}
/>
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should pass Intersection Observer options 1`] = `
Array [
  Array [
    [Function],
    Object {
      "foo": "bar",
      "threshold": Array [],
    },
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should register observer with DOM node from \`onRef\` 1`] = `
Array [
  Array [
    [Function],
    Object {
      "threshold": Array [
        0.5,
        1,
      ],
    },
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should register observer with DOM node from \`onRef\` 2`] = `
Array [
  Array [
    "ref",
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should register observer with DOM node from \`onRef\` with a custom handler name 1`] = `
Array [
  Array [
    [Function],
    Object {
      "threshold": Array [],
    },
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should register observer with DOM node from \`onRef\` with a custom handler name 2`] = `
Array [
  Array [
    "my-ref",
  ],
]
`;

exports[`withIntersectionObserverProps Intersection Observer API is supported should unregister observer with DOM node on unmount 1`] = `
Array [
  Array [],
]
`;
